--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.67.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.11.2",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-vector-icons": "^9.0.0",
